--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -284,16 +284,21 @@
     "        t_predict = pd.date_range(t0, periods = total_days)\n",
     "        tmp = np.arange(0,total_days)\n",
     "        val_predict = v0*model_func(tmp,coeff)\n",
+    "        sigma_n = 3*np.sqrt(np.diag(params['pcov'])) \n",
+    "        s_predict_below = pd.Series(v0*model_func(tmp,coeff - sigma_n), t_predict)\n",
+    "        s_predict_above = pd.Series(v0*model_func(tmp,coeff + sigma_n), t_predict)\n",
+    "\n",
     "        s_predict= pd.Series(val_predict, t_predict)\n",
-    "        return count[-days_back:], s_predict\n",
+    "        return count[-days_back:], s_predict, s_predict_below, s_predict_above\n",
     "\n",
     "    \n",
-    "    data, predicted = compute_prediction(m_series, days_forward, days_back)\n",
+    "    data, predicted, below, above = compute_prediction(m_series, days_forward, days_back)\n",
     "    display(Markdown('### Predicted {0} in {1} days is {2:.0f} in {3}'.format(series_label, \n",
     "                                                                          days_forward, predicted[-1], location_label)))\n",
     "    plt.figure(figsize = (12,6))\n",
-    "    data.plot(label = 'data', marker = '*')\n",
-    "    predicted.plot(label = 'predicted')\n",
+    "    data.plot(label = 'data', marker = 'o', markersize = 8)\n",
+    "    predicted.plot(label = 'predicted', linewidth = 2)\n",
+    "    plt.fill_between(predicted.index, below.values, above.values, alpha = 0.3)\n",
     "    ax = plt.gca()\n",
     "    ax.yaxis.set_minor_locator(AutoMinorLocator(2))\n",
     "    ax.yaxis.grid(True, which='both') \n",
@@ -314,15 +319,16 @@
     "def coeff_evaluate_bestfit(m_series, days_back = None):\n",
     "    if days_back is None:\n",
     "        days = [10,9,8,7,6,5,4]\n",
-    "        r2min = 1e10\n",
+    "        perr_min = 1e10\n",
     "        dbmin = -1\n",
     "        for db in days:\n",
     "            if db > len(m_series['count']):\n",
     "                continue\n",
     "            _, params = evaluate_bestfit(m_series, db)\n",
-    "            r2 = params['r2']\n",
-    "            if r2 < r2min:\n",
-    "                r2min = r2\n",
+    "            perr = np.sqrt(np.diag(params['pcov']))\n",
+    "#             perr = params['r2']\n",
+    "            if perr < perr_min:\n",
+    "                perr_min = perr\n",
     "                dbmin = db\n",
     "        _, params = evaluate_bestfit(m_series, dbmin)\n",
     "        params['days_back'] = dbmin      \n",
